  - Indentation should be working once more (fixes issue 18)
  - Hide mouse cursor while typing code (fixes issue 24)
  - When creating a new dialog, the template will use by default QDialogButtonBox (fixes issue 83)
  - Order of widgets in tools control is revised, also use QDialogButtonBox instead of normal buttons (fixes issue 89)
  - Break IDE closing with Cancel button if project changes are not saved (fixes issue 107)
  - The build log window is now a sub-class of QTextEdit. It is possible to copy and paste by right-click the texts in 
    this window (fixes issue 136 and 141)
  - Make moving up/down in files explorer equivalent to clicking items, and Return equivalent to clicking Open (fixes issue 154)
  - Updated translations for 
      * Chinese (Henri Girard <henrigirard@free.fr>) 
      * Vietnamese (Chuong.Nguyen@eng.monash.edu.au)
      * Italian (Rafael Venancio <rafael.venan@free.fr>)
      * Portuguese (Rafael Venancio <rafael.venan@free.fr>)
      * Spanish (Jorge Daniel Sampayo Vargas <jdsampayo@gmail.com>)
      * Turkish (fatih.asici@gmail.com)
      * German (Ralf Jung <ralfjung-e@gmx.de>)
  
May 29 2007 Version 0.23

Corrections:
- Prevents the opening of the same file in several tab.
The code completion works now with the classes created in the project.
When the IDE auto-completes some code, it also add the "()" after the cursor, and place the cursor in the best position
possible.
- Fix a problem with packaged versions of QDevelop. With these versions, the code completion did not work.

Adds:
- Add Portuguese translation thanks to Giuliano Santana
- Add Vietnamese translation. Thanks to Chuong Nguyen
- In subclassing, the code is now added in editor if the file is opened in tab (before, the code was added always in files on disk, even with the file opened).

April 11 2007 Version 0.22

Corrections: